src/infra/child/alb.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: ALB Nested Stack

# ------------------------------------------------------------#
# Input Parameters
# ------------------------------------------------------------#
Parameters:
  PJPrefix:
    Type: String

  VPCId:
    Type: String

  PrivateSubnetA:
    Type: String

  PrivateSubnetC:
    Type: String

Resources:
  # ------------------------------------------------------------#
  #  Security Group
  # ------------------------------------------------------------#
  ALBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group for ALB"
      GroupName: !Sub "${PJPrefix}-security-group-alb"
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - FromPort: "80"
          ToPort: "80"
          IpProtocol: "tcp"
          CidrIp: "0.0.0.0/0"
        - FromPort: "80"
          ToPort: "80"
          IpProtocol: "tcp"
          CidrIpv6: "::/0"

  # ------------------------------------------------------------#
  #  ALB
  # ------------------------------------------------------------#
  LoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Type: "application"
      Name: !Sub "${PJPrefix}-alb"
      SecurityGroups:
        - Ref: "ALBSecurityGroup"
      Subnets:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetC

  # ------------------------------------------------------------#
  #  Target Group
  # ------------------------------------------------------------#
  TargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      HealthCheckPath: "/"
      Name: !Sub "${PJPrefix}-tg"
      Port: "3000"
      Protocol: "HTTP"
      TargetType: "ip"
      HealthCheckProtocol: "HTTP"
      VpcId:
        Ref: "VpcID"
      TargetGroupAttributes:
        - Key: "deregistration_delay.timeout_seconds"
          Value: "300"

  # ------------------------------------------------------------#
  #  Listener
  # ------------------------------------------------------------#
  Listener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: "forward"
          TargetGroupArn:
            Ref: "TargetGroup"
      LoadBalancerArn:
        Ref: "LoadBalancer"
      Port: "80"
      Protocol: "HTTP"

# ------------------------------------------------------------#
# Output Parameters
# ------------------------------------------------------------#
Outputs:
  LoadBalancer:
    Value: !Ref LoadBalancer

  TargetGroup:
    Value: !Ref TargetGroup
